fixed the bell size and position inside his box, and aligned the arrow box
There still some work left to do with the resolution of the arrow and the bell needs to be better croped.

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@
     justify-content: center;
     margin: 25px;
     border: 1px solid #1C3023;
-    border-radius: 18px;
+    border-radius: 22px;
     box-shadow: 1px 2px 5px black;
 }
 
@@ -47,19 +47,24 @@
 }
 
 .feature-bell {
+    display: flex;
     width: 80px;
     margin: 5px;
     padding: 15px;
     border: 1px solid #0CF25D;
-    border-radius: 18px;
+    border-radius: 22px;
     box-sizing: border-box;
     box-shadow: inset 0 0 10px #0CF25D;
 }
 
     .feature-arrow {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    margin: 25px;
     border: 1px solid #1C3023;
     border-radius: 10px;
-    padding: 5px;
+    padding: 8px;
     box-shadow: 1px 2px 5px black;
     
 }
